--- a/FetchXmlBuilder/src/FetchXmlBuilder.csproj
+++ b/FetchXmlBuilder/src/FetchXmlBuilder.csproj
@@ -5,4 +5,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Tasks\Filter\" />
+    </ItemGroup>
+
 </Project>
