--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
       
 jobs:
   generate-version:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       
